tests/paczka1/fuzzy1/22170111.err
Error in line 10: BMtGNw A163 22,3
Error in line 14: A674 A674 28,7
Error in line 27: 8nsN A674 51,3
